--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,19 @@ project(lz_string VERSION 0.1.0 LANGUAGES C CXX)
 include(CTest)
 enable_testing()
 
-include(setup.cmake)
+set(CXX_VERSION 20)
 
-set_cxx(20)
-enable_iwyu()
+set(CMAKE_CXX_STANDARD ${CXX_VERSION})
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+if(NOT MSVC)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++${CXX_VERSION}")
+endif()
+
+if(NOT WIN32)
+    set(IWYU_ARGS include-what-you-use -w -Xiwyu --verbose=7)
+    add_compile_definitions(CMAKE_CXX_INCLUDE_WHAT_YOU_USE=${IWYU_ARGS})
+endif(NOT WIN32)
 
 set(PXD_THIRD_PARTY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/third-party)
 set(PXD_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
