remaining encode and decodes are added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(lz_string VERSION 0.1.0 LANGUAGES C CXX)
 include(CTest)
 enable_testing()
 
+set(PXD_TEST_PROJECT_NAME ${PROJECT_NAME}_test)
+
 set(CXX_VERSION 20)
 
 set(CMAKE_CXX_STANDARD ${CXX_VERSION})
@@ -27,12 +29,11 @@ set(PXD_HEADER_FILES
 )
 
 set(PXD_SOURCE_FILES
-    ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
     ${PXD_SOURCE_DIR}/lz_string.cpp
 )
 
 include_directories(
-    ${PXD_STL_INCLUDE_DIR}
+    ${PXD_INCLUDE_DIR}
 )
 
 set(COMMON_STD_HEADERS
@@ -47,12 +48,20 @@ set(COMMON_STD_HEADERS
 set(LIBS_TO_LINK
 )
 
-add_executable(${PROJECT_NAME} ${PXD_SOURCE_FILES})
+add_library(${PROJECT_NAME} ${PXD_SOURCE_FILES})
+add_executable(${PXD_TEST_PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp ${PXD_SOURCE_FILES})
 
 target_link_libraries(${PROJECT_NAME} ${LIBS_TO_LINK})
+target_link_libraries(${PXD_TEST_PROJECT_NAME} ${LIBS_TO_LINK})
 
 target_precompile_headers(
     ${PROJECT_NAME} PRIVATE
+    ${COMMON_STD_HEADERS}
+    ${PXD_HEADER_FILES}
+)
+
+target_precompile_headers(
+    ${PXD_TEST_PROJECT_NAME} PRIVATE
     ${COMMON_STD_HEADERS}
     ${PXD_HEADER_FILES}
 )
