googletest is added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,7 @@
 cmake_minimum_required(VERSION 3.5.0)
 project(lz_string VERSION 0.1.0 LANGUAGES C CXX)
 
-include(CTest)
-enable_testing()
+set(CMAKE_BUILD_TYPE Debug)
 
 set(PXD_TEST_PROJECT_NAME ${PROJECT_NAME}_test)
 
@@ -38,21 +37,22 @@ include_directories(
 
 set(COMMON_STD_HEADERS
     <string>
-    <string_view>
-    <vector>
-    <unordered_map>
+    <algorithm>
     <cmath>
+    <functional>
     <numeric>
+    <string_view>
+    <unordered_map>
+    <unordered_set>
+    <vector>
 )
 
 set(LIBS_TO_LINK
 )
 
 add_library(${PROJECT_NAME} ${PXD_SOURCE_FILES})
-add_executable(${PXD_TEST_PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp ${PXD_SOURCE_FILES})
 
 target_link_libraries(${PROJECT_NAME} ${LIBS_TO_LINK})
-target_link_libraries(${PXD_TEST_PROJECT_NAME} ${LIBS_TO_LINK})
 
 target_precompile_headers(
     ${PROJECT_NAME} PRIVATE
@@ -60,11 +60,44 @@ target_precompile_headers(
     ${PXD_HEADER_FILES}
 )
 
-target_precompile_headers(
-    ${PXD_TEST_PROJECT_NAME} PRIVATE
-    ${COMMON_STD_HEADERS}
-    ${PXD_HEADER_FILES}
-)
+# ------------------------------------------------------------------------------
+# -- Test Executable
+
+if(${CMAKE_BUILD_TYPE} MATCHES Debug)
+    set(PXD_TEST_SOURCE_FILES
+        ${CMAKE_CURRENT_SOURCE_DIR}/test.cpp
+        ${PXD_SOURCE_FILES}
+    )
+
+    include(FetchContent)
+    FetchContent_Declare(
+        googletest
+        GIT_REPOSITORY https://github.com/google/googletest/
+        GIT_TAG main
+    )
+
+    if(WIN32)
+        # For Windows: Prevent overriding the parent project's compiler/linker settings
+        set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+    endif(WIN32)
+    FetchContent_MakeAvailable(googletest)
+
+    enable_testing()
+
+    add_executable(${PXD_TEST_PROJECT_NAME} ${PXD_TEST_SOURCE_FILES})
+
+    target_link_libraries(${PXD_TEST_PROJECT_NAME} ${LIBS_TO_LINK} GTest::gtest_main)
+
+    include(GoogleTest)
+    gtest_discover_tests(${PXD_TEST_PROJECT_NAME})
+
+    target_precompile_headers(
+        ${PXD_TEST_PROJECT_NAME} PRIVATE
+        ${COMMON_STD_HEADERS}
+        ${PXD_HEADER_FILES}
+    )
+
+endif()
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
