uint8arr compress decompress funcs are added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,11 +76,13 @@ if(${CMAKE_BUILD_TYPE} MATCHES Debug)
         ${PXD_TEST_SOURCE_DIR}/compress_utf16_tests.cpp
         ${PXD_TEST_SOURCE_DIR}/compress_base64_tests.cpp
         ${PXD_TEST_SOURCE_DIR}/compress_uri_tests.cpp
+        ${PXD_TEST_SOURCE_DIR}/compress_uint8arr_tests.cpp
 
         ${PXD_TEST_SOURCE_DIR}/decompress_tests.cpp
         ${PXD_TEST_SOURCE_DIR}/decompress_utf16_tests.cpp
         ${PXD_TEST_SOURCE_DIR}/decompress_base64_tests.cpp
         ${PXD_TEST_SOURCE_DIR}/decompress_uri_tests.cpp
+        ${PXD_TEST_SOURCE_DIR}/decompress_uint8arr_tests.cpp
 
         ${PXD_SOURCE_FILES}
     )
