--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,13 +14,11 @@ jobs:
             matrix:
                 os: [ubuntu-latest, windows-latest]
                 build_type: [Release]
-                cpp_compiler: [clang]
+                cpp_compiler: [clang++]
                 include:
                     - os: windows-latest
-                      c_compiler: clang
                       cpp_compiler: clang++
                     - os: ubuntu-latest
-                      c_compiler: clang
                       cpp_compiler: clang++
 
         steps:
