--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,12 +14,6 @@ jobs:
             matrix:
                 os: [ubuntu-latest, windows-latest]
                 build_type: [Release]
-                cpp_compiler: [clang++]
-                include:
-                    - os: windows-latest
-                      cpp_compiler: clang++
-                    - os: ubuntu-latest
-                      cpp_compiler: clang++
 
         steps:
             - uses: actions/checkout@v4
@@ -31,10 +25,11 @@ jobs:
                 echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
 
             - name: Configure CMake
+              env:
+                CXX: clang++
               run: >
                 cmake -B ${{ steps.strings.outputs.build-output-dir }}
                     -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
-                    -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
                     -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
                     -S ${{ github.workspace }}
 
