workflows are updated

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,7 @@ jobs:
             - name: Configure CMake
               env:
                 CXX: clang++
+              working-directory: ${{github.workspace}}
               run: >
                 cmake -B ${{ steps.strings.outputs.build-output-dir }}
                     -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
