--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,13 +31,11 @@ jobs:
                 echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
 
             - name: Configure CMake
+              env:
+                CXX: clang++
+              working-directory: ${{github.workspace}}
               run: >
-                cmake -B ${{ steps.strings.outputs.build-output-dir }}
-                    -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
-                    -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
-                    -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
-                    -S ${{ github.workspace }}
-                    -DPXD_BUILD_TEST=ON
+                cmake -B ${{ steps.strings.outputs.build-output-dir }} -DPXD_BUILD_TEST=ON
 
             - name: Build
                 # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
