--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,10 +28,7 @@ jobs:
               env:
                 CXX: clang++
               working-directory: ${{github.workspace}}
-              run: >
-                cmake -B ${{ steps.strings.outputs.build-output-dir }}
-                    -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
-                    -S ${{ github.workspace }}
+              run: cmake -B ${{ steps.strings.outputs.build-output-dir }}
 
             - name: Build
               run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }}
