--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,8 +34,7 @@ jobs:
               env:
                 CXX: clang++
               working-directory: ${{github.workspace}}
-              run: >
-                cmake -B ${{ steps.strings.outputs.build-output-dir }} -DPXD_BUILD_TEST=ON
+              run: cmake -B ${{ steps.strings.outputs.build-output-dir }} -DPXD_BUILD_TEST=ON
 
             - name: Build
                 # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
