--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: lz-string-build
+name: multi-platform-build
 
 on:
   push:
@@ -12,7 +12,7 @@ jobs:
             fail-fast: false
 
             matrix:
-                os: [ubuntu-latest, windows-latest]
+                os: [ubuntu-latest, windows-latest, macos-latest]
                 build_type: [Release]
 
         steps:
