workflows are updated

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: multi-platform-build
+name: CI
 
 on:
   push:
@@ -6,7 +6,8 @@ on:
 
 jobs:
   build:
-    runs-on: ${{matrix.os}}
+    name: Testing on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
 
     strategy:
       fail-fast: false
@@ -14,6 +15,8 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
         build_type: [Release]
+        cmake-args:
+          [-DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ -G "Ninja"]
 
     steps:
       - uses: actions/checkout@v4
@@ -28,7 +31,11 @@ jobs:
         env:
           CXX: clang++
         working-directory: ${{github.workspace}}
-        run: cmake -DCMAKE_BUILD_TYPE=Release -B ${{ steps.strings.outputs.build-output-dir }}
+        run: cmake ${{matrix.cmake-args}} -DCMAKE_BUILD_TYPE=Release -B ${{ steps.strings.outputs.build-output-dir }} -DPXD_BUILD_TEST=ON
 
       - name: Build
-        run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }}
+        run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }} -j8
+
+      - name: Test
+        working-directory: ${{ steps.strings.outputs.build-output-dir }}
+        run: ctest
