include errors are fixed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,14 +35,14 @@ if(${CMAKE_BUILD_TYPE} MATCHES "Release")
   endif(is_supported)
 
   if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-    message(STATUS "Adding -O3 -march=native flags")
-    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -march=native")
+    message(STATUS "Adding -O3 -flto flags")
+    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -flto")
   endif(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
 
 endif(${CMAKE_BUILD_TYPE} MATCHES "Release")
 
-set(PXD_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
-set(PXD_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
+set(PXD_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/includes)
+set(PXD_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/sources)
 
 set(PXD_HEADER_FILES
     ${PXD_INCLUDE_DIR}/lz_string.hpp
